--- a/src/output.css
+++ b/src/output.css
@@ -550,60 +550,24 @@ video {
   margin: 0.5rem;
 }
 
-.m-1{
-  margin: 0.25rem;
-}
-
-.m-5{
-  margin: 1.25rem;
-}
-
-.m-0{
-  margin: 0px;
+.mb-4{
+  margin-bottom: 1rem;
 }
 
 .mt-1{
   margin-top: 0.25rem;
 }
 
-.mt-4{
-  margin-top: 1rem;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
-}
-
 .mt-3{
   margin-top: 0.75rem;
 }
 
-.mr-3{
-  margin-right: 0.75rem;
+.mt-4{
+  margin-top: 1rem;
 }
 
-.mr-5{
-  margin-right: 1.25rem;
-}
-
-.mr-0{
-  margin-right: 0px;
-}
-
-.ml-auto{
-  margin-left: auto;
-}
-
-.mr-2{
-  margin-right: 0.5rem;
-}
-
-.mr-10{
-  margin-right: 2.5rem;
-}
-
-.mb-4{
-  margin-bottom: 1rem;
+.mb-3{
+  margin-bottom: 0.75rem;
 }
 
 .flex{
@@ -626,94 +590,12 @@ video {
   width: 33.333333%;
 }
 
-.w-\[45\%\]{
-  width: 45%;
-}
-
 .w-full{
   width: 100%;
 }
 
 .w-screen{
   width: 100vw;
-}
-
-.w-\[20\%\]{
-  width: 20%;
-}
-
-.w-\[33\%\]{
-  width: 33%;
-}
-
-.w-\[50\%\]{
-  width: 50%;
-}
-
-.w-\[60\%\]{
-  width: 60%;
-}
-
-.w-7{
-  width: 1.75rem;
-}
-
-.w-\[2em\]{
-  width: 2em;
-}
-
-.w-\[20px\]{
-  width: 20px;
-}
-
-.w-\[10\%\]{
-  width: 10%;
-}
-
-.w-\[5\%\]{
-  width: 5%;
-}
-
-.w-10{
-  width: 2.5rem;
-}
-
-.w-\[100px\]{
-  width: 100px;
-}
-
-.w-8{
-  width: 2rem;
-}
-
-.w-1\/2{
-  width: 50%;
-}
-
-.w-1\/4{
-  width: 25%;
-}
-
-.break-before-auto{
-  -moz-column-break-before: auto;
-       break-before: auto;
-}
-
-.break-before-all{
-  -moz-column-break-before: all;
-       break-before: all;
-}
-
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.flex-row{
-  flex-direction: row;
 }
 
 .flex-col{
@@ -728,41 +610,16 @@ video {
   justify-content: center;
 }
 
-.justify-evenly{
-  justify-content: space-evenly;
-}
-
-.justify-items-center{
-  justify-items: center;
-}
-
-.gap-2{
-  gap: 0.5rem;
-}
-
 .gap-4{
   gap: 1rem;
-}
-
-.gap-1{
-  gap: 0.25rem;
-}
-
-.self-end{
-  align-self: flex-end;
-}
-
-.justify-self-end{
-  justify-self: end;
 }
 
 .overflow-hidden{
   overflow: hidden;
 }
 
-.break-normal{
-  overflow-wrap: normal;
-  word-break: normal;
+.break-words{
+  overflow-wrap: break-word;
 }
 
 .break-all{
@@ -781,10 +638,6 @@ video {
   border-width: 1px;
 }
 
-.border-\[1em\]{
-  border-width: 1em;
-}
-
 .border-black{
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
@@ -795,98 +648,9 @@ video {
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
 }
 
-.border-white{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-red-700{
-  --tw-border-opacity: 1;
-  border-color: rgb(185 28 28 / var(--tw-border-opacity));
-}
-
-.border-orange-700{
-  --tw-border-opacity: 1;
-  border-color: rgb(194 65 12 / var(--tw-border-opacity));
-}
-
-.border-fuchsia-800{
-  --tw-border-opacity: 1;
-  border-color: rgb(134 25 143 / var(--tw-border-opacity));
-}
-
-.border-red-800{
-  --tw-border-opacity: 1;
-  border-color: rgb(153 27 27 / var(--tw-border-opacity));
-}
-
-.border-red-900{
-  --tw-border-opacity: 1;
-  border-color: rgb(127 29 29 / var(--tw-border-opacity));
-}
-
-.border-red-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
-}
-
-.border-cyan-600{
-  --tw-border-opacity: 1;
-  border-color: rgb(8 145 178 / var(--tw-border-opacity));
-}
-
-.border-b-amber-400{
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(251 191 36 / var(--tw-border-opacity));
-}
-
-.bg-emerald-500{
+.bg-\[\#005B41\]{
   --tw-bg-opacity: 1;
-  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
-}
-
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-slate-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-}
-
-.bg-slate-900{
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#1B262C\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(27 38 44 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#0F4C75\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 76 117 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#191919\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(25 25 25 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#040D12\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(4 13 18 / var(--tw-bg-opacity));
-}
-
-.bg-emerald-900{
-  --tw-bg-opacity: 1;
-  background-color: rgb(6 78 59 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#bg-\[\#040D12\]\]{
-  background-color: #bg-[#040D12];
+  background-color: rgb(0 91 65 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#0F0F0F\]{
@@ -894,14 +658,19 @@ video {
   background-color: rgb(15 15 15 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#005B41\]{
+.bg-\[\#1B262C\]{
   --tw-bg-opacity: 1;
-  background-color: rgb(0 91 65 / var(--tw-bg-opacity));
+  background-color: rgb(27 38 44 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#008170\]{
+.bg-white{
   --tw-bg-opacity: 1;
-  background-color: rgb(0 129 112 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#1E1E1E\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 30 30 / var(--tw-bg-opacity));
 }
 
 .p-1{
@@ -916,6 +685,14 @@ video {
   padding: 0.75rem;
 }
 
+.p-4{
+  padding: 1rem;
+}
+
+.p-5{
+  padding: 1.25rem;
+}
+
 .p-6{
   padding: 1.5rem;
 }
@@ -924,56 +701,8 @@ video {
   padding: 0.2rem;
 }
 
-.p-8{
-  padding: 2rem;
-}
-
-.p-4{
-  padding: 1rem;
-}
-
 .p-2{
   padding: 0.5rem;
-}
-
-.p-10{
-  padding: 2.5rem;
-}
-
-.p-0{
-  padding: 0px;
-}
-
-.p-\[10px\]{
-  padding: 10px;
-}
-
-.p-96{
-  padding: 24rem;
-}
-
-.p-5{
-  padding: 1.25rem;
-}
-
-.pt-4{
-  padding-top: 1rem;
-}
-
-.pt-6{
-  padding-top: 1.5rem;
-}
-
-.pb-4{
-  padding-bottom: 1rem;
-}
-
-.pt-5{
-  padding-top: 1.25rem;
-}
-
-.pb-5{
-  padding-bottom: 1.25rem;
 }
 
 .text-center{
@@ -983,11 +712,6 @@ video {
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
 }
 
 .text-lg{
@@ -1004,42 +728,29 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-700{
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.text-\[\#ddd\]{
-  --tw-text-opacity: 1;
-  color: rgb(221 221 221 / var(--tw-text-opacity));
-}
-
 .text-gray-100{
   --tw-text-opacity: 1;
   color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
-.shadow{
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.text-green-600{
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity));
 }
 
-.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.text-red-600{
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
-.shadow-sm{
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .shadow-md{
@@ -1048,31 +759,13 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-2xl{
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-xl{
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-black{
   --tw-shadow-color: #000;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.shadow-red-400{
-  --tw-shadow-color: #f87171;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-green-800{
-  --tw-shadow-color: #166534;
-  --tw-shadow: var(--tw-shadow-colored);
+.filter{
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 * {
@@ -1100,12 +793,6 @@ body {
 
 @media (max-width: 380px){
   .max-\[380px\]\:flex-col{
-    flex-direction: column;
-  }
-}
-
-@media (max-width: 375px){
-  .max-\[375px\]\:flex-col{
     flex-direction: column;
   }
 }
