--- a/src/output.css
+++ b/src/output.css
@@ -620,6 +620,10 @@ video {
   margin-bottom: 1rem;
 }
 
+.mb-8{
+  margin-bottom: 2rem;
+}
+
 .ml-2{
   margin-left: 0.5rem;
 }
@@ -638,6 +642,14 @@ video {
 
 .mt-4{
   margin-top: 1rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
+.mb-1{
+  margin-bottom: 0.25rem;
 }
 
 .flex{
@@ -744,6 +756,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-x-auto{
+  overflow-x: auto;
+}
+
 .break-words{
   overflow-wrap: break-word;
 }
@@ -807,11 +823,6 @@ video {
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
 }
 
-.border-white{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
 .bg-\[\#005B41\]{
   --tw-bg-opacity: 1;
   background-color: rgb(0 91 65 / var(--tw-bg-opacity));
@@ -821,9 +832,9 @@ video {
   background-color: rgb(0 0 0 / 0.85);
 }
 
-.bg-gray-200{
+.bg-gray-300{
   --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
 .bg-gray-700{
@@ -964,11 +975,6 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1089,7 +1095,7 @@ body {
   --tw-space-x-reverse: 1;
 }
 
-.\[\&\>\*\:nth-child\(odd\)\]\:bg-slate-100>*:nth-child(odd){
+.\[\&\>\*\:nth-child\(odd\)\]\:bg-slate-200>*:nth-child(odd){
   --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
